--- a/src/Components/Header/header.module.scss
+++ b/src/Components/Header/header.module.scss
@@ -12,5 +12,6 @@
   align-items: center;
   padding: 0 20px ; 
   ;
+  z-index: 15;
   
 }
